# libhs-cpp

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in  libhs-cppConfig.cmake.in
.github/: FUNDING.yml
.github/workflows/: debian-package.yml
examples/: MultiPatternSearch.cpp  SinglePatternSearch.cpp  SinglePatternStream.cpp
includes/: BlockDatabase.h  Database.h  Exceptions.h  ExpressionInfo.h  ExtendedExpressionContext.h  HyperScan.h  IMatcher.h  IScanner.h  Literal.h  MultiLiteral.h  MultiPattern.h  MultiPatternExtended.h  Pattern.h  PlatformInfo.h  Scanner.h  Scratch.h  Stream.h  StreamDatabase.h  VectorDatabase.h
src/: Database.cpp  Scratch.cpp
